--- a/index.html
+++ b/index.html
@@ -36,46 +36,54 @@
     </header> 
 
     <div class="container">
-        <div class="wrap">
-            <div class="wakacje" id="w1">
-                <h2> Last Minute! </h2> 
-                <button> Zarezerwuj już teraz!</button>
+        <a href="opis1.html">
+            <div class="wrap">
+                <div class="wakacje" id="w1">
+                    <h2> Last Minute! </h2> 
+                    <button> Zarezerwuj już teraz!</button>
+                </div>
+                <div class="text"> 
+                    <h4>Lorem ipsum</h4>
+                    <h5>1600 zł/os</h5>
+                </div>
             </div>
-            <div class="text"> 
-                <h4>Lorem ipsum</h4>
-                <h5>1600 zł/os</h5>
+        </a>
+        <a href="opis2.html">
+            <div class="wrap">
+                <div class="wakacje" id="w2">
+                    <h2> Last Minute! </h2> 
+                    <button> Zarezerwuj już teraz!</button>
+                </div>
+                <div class="text"> 
+                    <h4>Lorem ipsum</h4>
+                    <h5>1600 zł/os</h5>
+                </div>
             </div>
-        </div>
-        <div class="wrap">
-            <div class="wakacje" id="w2">
-                <h2> Last Minute! </h2> 
-                <button> Zarezerwuj już teraz!</button>
+        </a>  
+        <a href="opis3.html">
+            <div class="wrap">
+                <div class="wakacje" id="w3">
+                    <h2> Last Minute! </h2> 
+                    <button> Zarezerwuj już teraz!</button>
+                </div>
+                <div class="text"> 
+                    <h4>Lorem ipsum</h4>
+                    <h5>1600 zł/os</h5>
+                </div>
             </div>
-            <div class="text"> 
-                <h4>Lorem ipsum</h4>
-                <h5>1600 zł/os</h5>
+        </a>     
+        <a href="opis4.html">
+            <div class="wrap">
+                <div class="wakacje" id="w4">
+                    <h2> Last Minute! </h2> 
+                    <button> Zarezerwuj już teraz!</button>
+                </div>
+                <div class="text"> 
+                    <h4>Lorem ipsum</h4>
+                    <h5>1600 zł/os</h5>
+                </div>
             </div>
-        </div>
-        <div class="wrap">
-            <div class="wakacje" id="w3">
-                <h2> Last Minute! </h2> 
-                <button> Zarezerwuj już teraz!</button>
-            </div>
-            <div class="text"> 
-                <h4>Lorem ipsum</h4>
-                <h5>1600 zł/os</h5>
-            </div>
-        </div>
-        <div class="wrap">
-            <div class="wakacje" id="w4">
-                <h2> Last Minute! </h2> 
-                <button> Zarezerwuj już teraz!</button>
-            </div>
-            <div class="text"> 
-                <h4>Lorem ipsum</h4>
-                <h5>1600 zł/os</h5>
-            </div>
-        </div>
+        </a>     
     </div>
 
     <footer class="footer">   
